Fix align-items:start (#399)

--- a/src/clr-addons/components.clr-addons.scss
+++ b/src/clr-addons/components.clr-addons.scss
@@ -35,7 +35,7 @@ body,
     display: flex;
     flex: 1 0 auto;
     justify-content: flex-end;
-    align-items: start;
+    align-items: flex-start;
 
     .dropdown-menu {
       z-index: map-get($clr-layers, sidepanel) - 2;
